--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Productivity dashboard</title>
-<script defer src="index.cbc80139d872503ee96e.js"></script><link href="main.56d475fd34e2a0e29d91.css" rel="stylesheet"></head>
+<script defer src="index.cddef6fd25dd350191f1.js"></script><link href="main.56d475fd34e2a0e29d91.css" rel="stylesheet"></head>
 
 <body>
     <section data-working-area class="working-area">
@@ -29,7 +29,7 @@
 <template id="links-search-template">
     <section data-links-search class="links-search">
         <span class="text links-search__text">Links</span>
-        <img width="30px" height="30px" src="./images/search.svg" alt="search" class="image">
+        <img width="30px" height="30px" src="images/search.svg" alt="search" class="image">
     </section>
 </template>
 
