Add project files

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 <template id="links-search-template">
     <section data-links-search class="links-search">
         <span class="text links-search__text">Links</span>
-        <img width="30px" height="30px" src="./images/search.svg" alt="search" class="image">
+        <img width="30px" height="30px" src="images/search.svg" alt="search" class="image">
     </section>
 </template>
 
