--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title localization-key="title"></title>
-<script defer src="index.507e78fd8f380dcc4fa9.js"></script><link href="main.60f1eba94733bf6a4f8f.css" rel="stylesheet"></head>
+<script defer src="index.f64fa18b0a4d7bff31b9.js"></script><link href="main.a3f25d26aa3d41f6de61.css" rel="stylesheet"></head>
 
 <body>
     <main>
@@ -85,6 +85,9 @@
 
 <template id="weather-template">
     <section class="weather dropdown">
+        <div class="weather__loader">
+            <div class="loader"></div>
+        </div>
         <div class="weather__container">
             <div class="weather__container_dir_inline">
                 <img width="50px" height="50px" class="image weather__icon" alt="Weather icon">
