--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,9 @@
 
 <template id="weather-template">
     <section class="weather dropdown">
+        <div class="weather__loader">
+            <div class="loader"></div>
+        </div>
         <div class="weather__container">
             <div class="weather__container_dir_inline">
                 <img width="50px" height="50px" class="image weather__icon" alt="Weather icon">
@@ -127,6 +130,29 @@
                     <div>
                         <span localization-key="weather-wind" class="text weather__text_type_description"></span>
                         <span class="text weather__text_type_description-content weather__wind"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</template>
+
+<template id="todo-template">
+    <section class="todo">
+        <button localization-key="todo" class="button button_type_todo text"></button>
+        <div class="todo__dropdown">
+            <div class="todo__dropdown-task-content">
+                <span localization-key="todo-active" class="text todo__text"></span>
+                <ul draggable="true" class="todo__incomplete-tasks"></ul>
+                <span localization-key="todo-completed" class="text todo__text"></span>
+                <ul draggable="true" class="todo__completed-tasks"></ul>
+            </div>
+            <div class="todo__dropdown-add-task-content">
+                <button class="button todo__button">+</button>
+                <div class="todo__task-input">
+                    <input localization-key="todo-placeholder" maxlength="130" class="input todo__input">
+                    <div class="button__container">
+                        <button class="button button_type_reset"></button>
                     </div>
                 </div>
             </div>
