--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title localization-key="title"></title>
-<script defer src="index.f64fa18b0a4d7bff31b9.js"></script><link href="main.a3f25d26aa3d41f6de61.css" rel="stylesheet"></head>
+<script defer src="index.688397787bdd5f27a2bc.js"></script><link href="main.8ef2cd3c802e33e98107.css" rel="stylesheet"></head>
 
 <body>
     <main>
@@ -130,6 +130,29 @@
                     <div>
                         <span localization-key="weather-wind" class="text weather__text_type_description"></span>
                         <span class="text weather__text_type_description-content weather__wind"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</template>
+
+<template id="todo-template">
+    <section class="todo">
+        <button localization-key="todo" class="button button_type_todo text"></button>
+        <div class="todo__dropdown">
+            <div class="todo__dropdown-task-content">
+                <span localization-key="todo-active" class="text todo__text"></span>
+                <ul draggable="true" class="todo__incomplete-tasks"></ul>
+                <span localization-key="todo-completed" class="text todo__text"></span>
+                <ul draggable="true" class="todo__completed-tasks"></ul>
+            </div>
+            <div class="todo__dropdown-add-task-content">
+                <button class="button todo__button">+</button>
+                <div class="todo__task-input">
+                    <input localization-key="todo-placeholder" maxlength="130" class="input todo__input">
+                    <div class="button__container">
+                        <button class="button button_type_reset"></button>
                     </div>
                 </div>
             </div>
